# image_ffi_project

./: .gitignore  Cargo.toml  README.md
image_processor/: Cargo.toml
image_processor/example_files/: params.json
image_processor/src/: cli.rs  error.rs  lib.rs  plugin_loader.rs
plugins/blur_plugin/: Cargo.toml
plugins/blur_plugin/src/: lib.rs
plugins/mirror_plugin/: Cargo.toml
plugins/mirror_plugin/src/: lib.rs
