[package]
name = "image_processor"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "image_processor"
path = "src/bin/image_processor.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap", "dep:image", "dep:libloading", "dep:anyhow"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true}
image = { version = "0.25", optional = true}
libloading = { version = "0.9", optional = true }

env_logger = "0.11"
serde_json = "1"
log = "0.4"
